syntax = "proto3";

package protos.messages;

// The first message a peer sends when connecting to another peer. It sends its
// own ID.
message PeerHello {
    string id = 1; // A hex-encoded cryptographic address for this peer.
}

// The address of a peer in the network.
message PeerAddr {
    string id = 1; // A hex-encoded cryptographic address for this peer.
    string ip = 2; // The IPv4 or IPv6 address for this peer.
    uint32 port = 3; // The port on which to reach this peer (any number 65536 or greater will be regarded as a malformed message)
}

// An address book is just a list of `PeerAddr` instances.
message AddressBook {
    repeated PeerAddr addrs = 1;
}

// A simple request for a peer's address book.
message AddressBookRequest {}

